// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleHeader In one calendar day Within the first minute of update - Breaking 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa frrTdE"
    >
      <div
        class="sc-bwzfXH htoLMg"
      >
        <div
          class="sc-ifAKCX iDsMnF"
        >
          <div
            class="sc-dnqmqq bGasAc"
          >
            <div
              class="sc-gZMcBi bcfOTp"
            >
              <div
                class="sc-VigVT eQelNa"
              >
                ■
              </div>
              <div>
                <span
                  class="sc-fjdhpX cvtGYv"
                >
                  BREAKING
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-EHOje cDoFHw"
            data-testid="UpdatedTime"
          >
            6.30am
          </div>
        </div>
      </div>
      <h2
        class="sc-htoDjs FEBRW"
      >
        This is the headline
      </h2>
    </div>
  </div>
</body>
`;

exports[`ArticleHeader In one calendar day Within the first minute of update - Not Breaking 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa eFkHlI"
    >
      <div
        class="sc-bwzfXH htoLMg"
      >
        <div
          class="sc-ifAKCX iDsMnF"
        >
          <div
            class="sc-EHOje cDoFHw"
            data-testid="UpdatedTime"
          >
            6.30am
          </div>
        </div>
      </div>
      <h2
        class="sc-htoDjs FEBRW"
      >
        This is the headline
      </h2>
    </div>
  </div>
</body>
`;
